--- a/1/index.html
+++ b/1/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Loop 1 - Step 1</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Loop 1 - Step 1</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <!--
-    Welcome to your first asset!
+    <!--
+        Welcome to your first asset!
 
-    You could've noticed there is a link to Roboto font in the head.
-    You can use it in css by typing font-family: Roboto, sans-serif;
-    and you can customize it by using font-weight (400, 500 etc. - numbers in the link tag)
+        You could've noticed there is a link to Roboto font in the head.
+        You can use it in css by typing font-family: Roboto, sans-serif;
+        and you can customize it by using font-weight (400, 500 etc. - numbers in the link tag)
 
-    Good luck and have fun!
-  -->
+        Good luck and have fun!
+    -->
+    <main>
+        <div class="container">
+            <div class="products">
+                <div class="product__item product-item">
+                    <div class="product-item__img">
+                        <img src="img/device.svg" alt="mobile">
+                    </div>
+                    <div class="product-item__name">mobile</div>
+                    <div class="product-item__desc">Get notifications about new releases in our moble app.</div>
+                    <div class="product-item__pricing"><sup>$</sup><span class="product-item__price">10</span>month</div>
+                </div>
+                <div class="product__item product-item">
+                    <div class="product-item__img">
+                        <img src="img/laptop.svg" alt="laptop">
+                    </div>
+                    <div class="product-item__name">desktop</div>
+                    <div class="product-item__desc">Enjoy ne w episodes on your laptop in browser with our web service, which supports all the platforms.</div>
+                    <div class="product-item__pricing"><sup>$</sup><span class="product-item__price">15</span>month</div>
+                </div>
+                <div class="product__item product-item">
+                    <div class="product-item__img">
+                        <img src="img/monitor.svg" alt="monitor">
+                    </div>
+                    <div class="product-item__name">tv</div>
+                    <div class="product-item__desc">Watch your favorite series at home on large screen with our TV application.</div>
+                    <div class="product-item__pricing"><sup>$</sup><span class="product-item__price">20</span>month</div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
