--- a/1/index.html
+++ b/1/index.html
@@ -27,15 +27,15 @@
                     </div>
                     <div class="product-item__name">mobile</div>
                     <div class="product-item__desc">Get notifications about new releases in our moble app.</div>
-                    <div class="product-item__pricing"><sup>$</sup><span class="product-item__price">10</span>month</div>
+                    <div class="product-item__pricing"><span class="product-item__price"><sup>$</sup>10</span> / month</div>
                 </div>
                 <div class="product__item product-item">
                     <div class="product-item__img">
                         <img src="img/laptop.svg" alt="laptop">
                     </div>
                     <div class="product-item__name">desktop</div>
-                    <div class="product-item__desc">Enjoy ne w episodes on your laptop in browser with our web service, which supports all the platforms.</div>
-                    <div class="product-item__pricing"><sup>$</sup><span class="product-item__price">15</span>month</div>
+                    <div class="product-item__desc">Enjoy new episodes on your laptop in browser with our web service, which supports all the platforms.</div>
+                    <div class="product-item__pricing"><span class="product-item__price"><sup>$</sup>15</span> / month</div>
                 </div>
                 <div class="product__item product-item">
                     <div class="product-item__img">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="product-item__name">tv</div>
                     <div class="product-item__desc">Watch your favorite series at home on large screen with our TV application.</div>
-                    <div class="product-item__pricing"><sup>$</sup><span class="product-item__price">20</span>month</div>
+                    <div class="product-item__pricing"><span class="product-item__price"><sup>$</sup>20</span> / month</div>
                 </div>
             </div>
         </div>
